# harmony

./: COPYRIGHT  LICENSE  NOTICE  THIRD_PARTY_NOTICES.txt  build.xml  rat.excludes
classlib/: LICENSE  NOTICE  README.txt  RUNNING-TESTS.txt  build.xml
classlib/doc/: README.txt  (+7 more)
common_resources/: build.xml
debian/: README.Debian  apache-harmony-hdk.dirs  apache-harmony-jdk.dirs  apache-harmony-jdk.links  apache-harmony-jdk.lintian  apache-harmony-jdk.postinst  apache-harmony-jdk.prerm  apache-harmony-jre.dirs  apache-harmony-jre.links  apache-harmony-jre.lintian  apache-harmony-jre.postinst  apache-harmony-jre.prerm  changelog  control  copyright  docs  harmony-5.0-classlib.dirs  harmony-5.0-drlvm.dirs  harmony-5.0-drlvm.lintian  harmony-5.0-drlvm.postinst  harmony-5.0-drlvm.prerm  harmony-5.0-hdk.dirs  harmony-5.0-jdk.dirs  harmony-5.0-jdk.links  harmony-5.0-jdk.postinst  harmony-5.0-jdk.prerm  harmony-5.0-jre.links  harmony-5.0-jre.lintian  harmony-5.0-jre.postinst  harmony-5.0-jre.prerm  harmony-6.0-drlvm.dirs  harmony-6.0-drlvm.lintian  harmony-6.0-drlvm.postinst  harmony-6.0-drlvm.prerm  harmony-6.0-hdk.dirs  harmony-6.0-jdk.dirs  harmony-6.0-jdk.links  harmony-6.0-jdk.postinst  harmony-6.0-jdk.prerm  harmony-6.0-jre.dirs  (+4 more)
doc/: README.txt
drlvm/: LICENSE  NOTICE  README.txt  build.xml
ibm-v4/: build.xml
jdktools/: LICENSE  NOTICE  build.xml
sandbox/contribs/jchevm/jchevm/: APACHE.README  AUTHORS  CHANGES  COPYRIGHT  COPYRIGHT.Apache  INSTALL  LICENSE  Makefile.am  NOTES  README  autogen.sh  configure.ac  configure.in
sandbox/contribs/jchevm/jchevm/doc/: Makefile.am  jc.1.in  jc.texi
sandbox/contribs/jchevm/jchevm/etc/: Makefile.am  classpath.spec.in  gdb.userdef  jc.conf  jc.xpm  jchevm.spec.in  jcvm.spec.in  makedist.sh  regen.sh
sandbox/contribs/jchevm/jchevm/include/: Makefile.am  jc_arraydefs.h  jc_defs.h  jc_invoke.h  jc_machdep.h.in  jni.h  jni_machdep.h
sandbox/contribs/jchevm/jchevm/java/: Makefile.am
sandbox/contribs/jchevm/jchevm/java/org/: Makefile.am
sandbox/contribs/jchevm/jchevm/java/org/dellroad/: Makefile.am
sandbox/contribs/jchevm/jchevm/java/org/dellroad/jc/: BootstrapObjectGenerator.java  ClassfileFinder.java  Generate.java  JCFinder.java  Makefile.am  ObjectGenerator.java  SearchpathFinder.java  package.html
sandbox/contribs/jchevm/jchevm/java/org/dellroad/jc/cgen/: ActiveUseCheckStmt.java  C.java  CExpr.java  CFile.java  CMethod.java  CStmtSwitch.java  CValueSwitch.java  ClassConstant.java  CodeGenerator.java  CodeWriter.java  Constants.java  DefaultMethodOptimizer.java  HFile.java  JCObjectGenerator.java  Makefile.am  MethodOptimizer.java  NullCheckStmt.java  SootCodeGenerator.java  SourceFile.java  SourceLocator.java  StmtTagCopierSwitch.java  Util.java  package.html
sandbox/contribs/jchevm/jchevm/java/org/dellroad/jc/cgen/analysis/: ActiveUseAnalysis.java  ActiveUseTag.java  ActiveUseTagger.java  ActiveUseValueSwitch.java  FinalizeDetector.java  FollowsAnalysis.java  Makefile.am  ReferenceDetector.java  TypeAnalysis.java  package.html
sandbox/contribs/jchevm/jchevm/java/org/dellroad/jc/cgen/escape/: EscapeAnalysis.java  EscapingStmtSwitch.java  EscapingValueSwitch.java  KnownSizeDetector.java  Makefile.am  StackAlloc.java  StackAllocTag.java  package.html
sandbox/contribs/jchevm/jchevm/java/org/dellroad/jc/vm/: DebugThread.java  FinalizerThread.java  JarLoader.java  Makefile.am  package.html
sandbox/contribs/jchevm/jchevm/jc/: Makefile.am  main.c
sandbox/contribs/jchevm/jchevm/jsrc/: Makefile.am
sandbox/contribs/jchevm/jchevm/libjc/: Makefile.am  README  analysis.c  array.c  bootstrap.c  c_support.c  cf_parse.c  cf_parse.h  cl_alloc.c  class_bytes.c  class_file.c  class_loader.c  class_object.c  debug_line.c  definitions.h  derive.c  derive2.c  elf.c  exception.c  fatal.c  gc_final.c  gc_root.c  gc_scan.c  heap.c  init.c  initialize.c  inline.h  instance.c  interp.c  invoke.c  jc_invoke.c  jni_invoke.c  jni_native.c  libjc.h  load.c  lock.c  misc.c  mutex.c  native_lib.c  native_ref.c  (+21 more)
sandbox/contribs/jchevm/jchevm/libjc/arch/: Makefile.am  arch_definitions.h  arch_libjc.h  arch_structures.h
sandbox/contribs/jchevm/jchevm/libjc/arch/i386/: .cvsignore  Makefile.am  arch_elf_reloc.c  arch_functions.c  i386_definitions.h  i386_libjc.h  i386_structures.h
sandbox/contribs/jchevm/jchevm/libjc/arch/ppc/: Makefile.am  arch_functions.c  ppc_definitions.h  ppc_libjc.h  ppc_structures.h
sandbox/contribs/jchevm/jchevm/libjc/native/: Makefile.am  gnu_classpath_VMStackWalker.c  gnu_classpath_VMSystemProperties.c  java_io_VMObjectStreamClass.c  java_lang_VMClass.c  java_lang_VMClassLoader.c  java_lang_VMCompiler.c  java_lang_VMObject.c  java_lang_VMRuntime.c  java_lang_VMSystem.c  java_lang_VMThread.c  java_lang_VMThrowable.c  java_lang_reflect_Constructor.c  java_lang_reflect_Field.c  java_lang_reflect_Method.c  org_dellroad_jc_JCFinder.c  org_dellroad_jc_cgen_SootCodeGenerator.c  org_dellroad_jc_vm_DebugThread.c  org_dellroad_jc_vm_FinalizerThread.c
sandbox/contribs/jchevm/jchevm/tools/: Makefile.am
sandbox/contribs/jchevm/jchevm/tools/cfdump/: Makefile.am  cfdump.h  dep.c  deps.c  main.c  support.c
sandbox/contribs/jchevm/jchevm/tools/jcgen/: Makefile.am  jcgen.in
sandbox/contribs/jchevm/jchevm/tools/jcjavah/: Makefile.am  gen.c  javah.h  main.c
sandbox/contribs/tanzer_component/vm/: Makefile.am  configure.h.in  configure.in
sandbox/contribs/tanzer_component/vm/components/: Makefile.am
sandbox/contribs/tanzer_component/vm/components/TestComponent1Impl/: Makefile.am  TestComponent1Impl.c
sandbox/contribs/tanzer_component/vm/components/TestComponent2Impl/: Makefile.am  TestComponent2Impl.c
sandbox/contribs/tanzer_component/vm/core/: Makefile.am
sandbox/contribs/tanzer_component/vm/core/comp_model/: ComponentModel.c  ComponentModel.h  VmComponent.h
sandbox/contribs/tanzer_component/vm/core/comp_model/interfaces/: TestComponent1.h  TestComponent2.h
sandbox/contribs/tanzer_component/vm/test/: Makefile.am
sandbox/contribs/tanzer_component/vm/test/comp_model/: Makefile.am  TestComponentModel.c
(+10329 files in other folders)
