dnl Process this file with autoconf to produce a configure script.

AC_INIT(test/comp_model/TestComponentModel.c)

AC_CANONICAL_TARGET

AM_INIT_AUTOMAKE(TestComponentModel, 0.0.1)
AM_CONFIG_HEADER(configure.h)


AC_ARG_ENABLE( global-debug,
[  --enable-global-debug Enable global debugging switch [default=no]],
		 [GLOBAL_DEBUG_ENABLE=1],[GLOBAL_DEBUG_ENABLE=0])
AC_SUBST(GLOBAL_DEBUG_ENABLE)

AC_DEFINE_UNQUOTED(GLOBAL_DEBUG_ENABLE, $GLOBAL_DEBUG_ENABLE, [global debugging switch])

BASE_DIR="$PWD"

VM_INCLUDES="-I$BASE_DIR"
VM_CORE_LIBS="-L$BASE_DIR/core -ldl"

CPPFLAGS="$CPPFLAGS $VM_INCLUDES"
LIBS="$LIBS $VM_CORE_LIBS"

dnl Only use -Wall if we have gcc
if test "x$GCC" = "xyes"; then
  if test -z "`echo "$CPPFLAGS" | grep "\-Wall" 2> /dev/null`" ; then
    CPPFLAGS="$CPPFLAGS -Wall"
  fi
fi

dnl ------------------------------------------
dnl Checks for programs.
AC_PROG_CC
dnl AC_PROG_CPP
dnl AC_PROG_CXX
AC_LANG_C
AM_PROG_LIBTOOL
AC_PROG_INSTALL
AC_PROG_MAKE_SET

dnl Figure out which math library to use
case "$target" in
    *-*-cygwin* | *-*-mingw32*)
        MATHLIB=""
        SYS_GL_LIBS="-lopengl32"
        ;;
    *)
        MATHLIB="-lm"
        AC_PATH_X
        AC_PATH_XTRA
        if test x$have_x = xyes; then
            CFLAGS="$CFLAGS $X_CFLAGS"
            SYS_GL_LIBS="$X_LIBS -lGL -lGLU"
        else
            SYS_GL_LIBS="-lGL -lGLU"
        fi
        ;;
esac
AC_SUBST(MATHLIB)

AC_OUTPUT(
	Makefile
	core/Makefile
	test/Makefile
	test/comp_model/Makefile
	components/Makefile
	components/TestComponent1Impl/Makefile
	components/TestComponent2Impl/Makefile
)

