## $Id: Makefile.am,v 1.4 2004/12/24 21:55:56 archiecobbs Exp $

SUBDIRS=	analysis escape

EXTRA_DIST=	ActiveUseCheckStmt.java \
		C.java \
		CExpr.java \
		CFile.java \
		CMethod.java \
		CStmtSwitch.java \
		CValueSwitch.java \
		ClassConstant.java \
		CodeGenerator.java \
		CodeWriter.java \
		Constants.java \
		DefaultMethodOptimizer.java \
		HFile.java \
		JCObjectGenerator.java \
		MethodOptimizer.java \
		NullCheckStmt.java \
		SootCodeGenerator.java \
		SourceFile.java \
		SourceLocator.java \
		StmtTagCopierSwitch.java \
		Util.java \
		package.html

